[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tide_gatherer"
version = "0.1.0"
authors = [
    { name = "Nicolas Mokus", email = "nmks@tuta.io" }
]
readme = "README.md"
requires-python = ">=3.8"

[project.scripts]
tide_gatherer = "tide_gatherer.__main__:main"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
