[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tide_gatherer"
authors = [{ name = "Nicolas Mokus", email = "nmks@tuta.io" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["polars", "pytz", "requests"]

[tool.hatch.version]
path = "src/tide_gatherer/__about__.py"

[project.scripts]
tide_gatherer = "tide_gatherer.__main__:main"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
